# Graphs

./: CMakeLists.txt  readme.md
include/: Generator.hpp  Graph.hpp  GraphException.hpp  Metrics.hpp  Parser.hpp  Serializer.hpp
include/algorithms/: BiconnectedComponents.hpp  DFSVisitor.hpp
include/generators/: CompleteBipartiteGenerator.hpp  CompleteGraphGenerator.hpp  CubicGraphGenerator.hpp  CycleGenerator.hpp  FixedArticulationPointsGenerator.hpp  FixedBridgesGenerator.hpp  FixedComponentsGenerator.hpp  FixedTwoBridgesGenerator.hpp  HalinGraphGenerator.hpp  PathGenerator.hpp  RandomGraphGenerator.hpp  StarGenerator.hpp  TreeGenerator.hpp  WheelGenerator.hpp
include/parsers/: AdjacencyMatrixParser.hpp  DIMACSParser.hpp  EdgeListParser.hpp  SNAPParser.hpp
include/serializers/: GraphVizSerializer.hpp  Program4YouSerializer.hpp
src/: Graph.cpp  Metrics.cpp  main.cpp
src/algorithms/: BiconnectedComponents.cpp  DFSVisitor.cpp
src/generators/: CompleteBipartiteGenerator.cpp  CompleteGraphGenerator.cpp  CubicGraphGenerator.cpp  CycleGenerator.cpp  FixedArticulationPointsGenerator.cpp  FixedBridgesGenerator.cpp  FixedComponentsGenerator.cpp  FixedTwoBridgesGenerator.cpp  HalinGraphGenerator.cpp  PathGenerator.cpp  RandomGraphGenerator.cpp  StarGenerator.cpp  TreeGenerator.cpp  WheelGenerator.cpp
src/parsers/: AdjacencyMatrixParser.cpp  DIMACSParser.cpp  EdgeListParser.cpp  SNAPParser.cpp
src/serializers/: GraphVizSerializer.cpp  Program4YouSerializer.cpp
tests/: test_generators.cpp  test_graph.cpp  test_metrics.cpp
